--- a/package.json
+++ b/package.json
@@ -3,15 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "start": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start-prod": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.7.1",
+    "@emotion/react": "^11.8.2",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.8.1",
+    "@fontsource/roboto": "^4.5.3",
+    "@mui/material": "^5.5.0",
+    "add": "^2.0.6",
+    "date-fns": "^2.28.0",
     "next": "12.1.0",
+    "next-stylus": "^0.0.1",
+    "or": "^0.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "stylus": "^0.56.0",
+    "stylus-loader": "^6.2.0",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "eslint": "8.10.0",
