--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.8.1",
     "@fontsource/roboto": "^4.5.3",
+    "@mui/icons-material": "^5.5.0",
+    "@mui/lab": "^5.0.0-alpha.72",
     "@mui/material": "^5.5.0",
     "add": "^2.0.6",
     "date-fns": "^2.28.0",
